# discordbot

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt  run.py
